# motis

modules/tripbased/: CMakeLists.txt
modules/tripbased/include/motis/tripbased/: query.h  tb_ontrip_search.h
modules/tripbased/include/motis/tripbased/gpu/: gpu_postprocessing.h  gpu_timetable.h  gpu_tripbased.h
modules/tripbased/src/: tripbased.cc
modules/tripbased/src/gpu/: gpu_postprocessing.cc  gpu_timetable.cc  gpu_tripbased.cu
